--- a/hive-metastore-cm.yaml
+++ b/hive-metastore-cm.yaml
@@ -1,13 +1,32 @@
 apiVersion: v1
 data:
-  core-site.xml: "<configuration>\n    <property>\n        <name>fs.s3a.connection.ssl.enabled</name>\n\t
-    \   <value>true</value>\n    </property>\n    <property>\n        <name>fs.defaultFS</name>\n
-    \       <value>s3a://hive</value>\n    </property>\n    <property>\n        <name>fs.s3a.path.style.access</name>\n
-    \       <value>true</value>\n    </property>\n    <property>\n        <name>fs.s3a.impl</name>\n
-    \       <value>org.apache.hadoop.fs.s3a.S3AFileSystem</value>\n    </property>\n
-    \   <property>\n        <name>fs.s3a.endpoint</name>\n        <value>$(S3_ENDPOINT)</value>\n
-    \   </property>\n    <property>\n        <name>fs.s3a.fast.upload</name>\n        <value>true</value>\n
-    \   </property>\n</configuration>\n"
+  core-site.xml: |
+    <configuration>
+        <property>
+            <name>fs.s3a.connection.ssl.enabled</name>
+            <value>true</value>
+        </property>
+        <property>
+            <name>fs.defaultFS</name>
+            <value>s3a://hive</value>
+        </property>
+        <property>
+            <name>fs.s3a.path.style.access</name>
+            <value>true</value>
+        </property>
+        <property>
+            <name>fs.s3a.impl</name>
+            <value>org.apache.hadoop.fs.s3a.S3AFileSystem</value>
+        </property>
+        <property>
+            <name>fs.s3a.endpoint</name>
+            <value>http://172.19.10.200:9000</value>
+        </property>
+        <property>
+            <name>fs.s3a.fast.upload</name>
+            <value>true</value>
+        </property>
+    </configuration>
   metastore-site.xml: |
     <configuration>
         <property>
@@ -28,7 +47,7 @@ data:
         </property>
         <property>
             <name>javax.jdo.option.ConnectionURL</name>
-            <value>jdbc:mysql://mysql-service.my-namespace.svc.cluster.local:3306/metastore_db?useSSL=false</value>
+            <value>jdbc:mysql://mysql-service.hive-metastore.svc.cluster.local:3306/metastore_db?useSSL=false</value>
         </property>
         <property>
             <name>javax.jdo.option.ConnectionUserName</name>
@@ -36,7 +55,7 @@ data:
         </property>
         <property>
             <name>javax.jdo.option.ConnectionPassword</name>
-            <value>$(HIVE_PASSWORD)</value>
+            <value>8v6EgTV6</value>
         </property>
         <property>
             <name>metastore.thrift.port</name>
@@ -46,4 +65,5 @@ data:
 kind: ConfigMap
 metadata:
   creationTimestamp: null
-  name: metastore-cfg
+  name: hive-metastore-cm
+  namespace: hive-metastore
