--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -47,4 +47,4 @@ spec:
       volumes:
         - name: metastore-cfg-vol
           configMap:
-            name: metastore-cfg
+            name: hive-metastore-cm
