fix initschema useSSL=false update setup script to provide env don't specify SC by default

--- a/mysql-server/base/mysqld-pvc.yaml
+++ b/mysql-server/base/mysqld-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 4Gi
-  storageClassName: direct.csi.min.io
+  #storageClassName: direct.csi.min.io
