--- a/hive-metastore/hive-initschema.yaml.template
+++ b/hive-metastore/hive-initschema.yaml.template
@@ -1,7 +1,9 @@
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: hive-initschema
+  namespace: hive-metastore
 spec:
   template:
     spec:
@@ -10,6 +12,6 @@ spec:
         image: tarland/hive-metastore:3.0.0
         command: ["/opt/hive-metastore/bin/schematool"]
         args: ["--verbose" ,"-initSchema" , "-dbType", "mysql" , "-userName", "root",
-          "-passWord", "${MYSQLD_ROOT_PASSWORD}" , "-url", "jdbc:mysql://mysql-service.hive-metastore.svc.cluster.local:3306/metastore_db?createDatabaseIfNotExist=true"]
+          "-passWord", "${MYSQLD_ROOT_PASSWORD}" , "-url", "jdbc:mysql://mysql-service.hive-metastore.svc.cluster.local:3306/metastore_db?createDatabaseIfNotExist=true&useSSL=false"]
       restartPolicy: Never
-  backoffLimit: 4
+  backoffLimit: 3
