--- a/conf/metastore-site.xml.template
+++ b/conf/metastore-site.xml.template
@@ -17,7 +17,7 @@
     </property>
     <property>
         <name>javax.jdo.option.ConnectionURL</name>
-        <value>jdbc:mysql://mysql-service.${HIVE_NS}.svc.cluster.local:3306/metastore_db?useSSL=false</value>
+        <value>jdbc:mysql://mysql-service.${TRINO_NAMESPACE}.svc.cluster.local:3306/metastore_db?useSSL=false</value>
     </property>
     <property>
         <name>javax.jdo.option.ConnectionUserName</name>
