tmp fix s3endpoint uri

--- a/conf/core-site.xml.template
+++ b/conf/core-site.xml.template
@@ -1,7 +1,7 @@
 <configuration>
     <property>
         <name>fs.s3a.connection.ssl.enabled</name>
-        <value>true</value>
+        <value>false</value>
     </property>
     <property>
         <name>fs.defaultFS</name>
