--- a/hive2/hive-metastore/base/service.yaml
+++ b/hive2/hive-metastore/base/service.yaml
@@ -2,11 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: trino-coordinator-service
+  name: hive-metastore
   namespace: $(namespace)
 spec:
   ports:
-  - port: 8080
+  - port: 9083
   selector:
-    app: trino-coordinator
-  type: LoadBalancer
+    app: hive-metastore
