--- a/trino/base/statefulset.yaml
+++ b/trino/base/statefulset.yaml
@@ -57,7 +57,7 @@ spec:
         resources:
           requests:
             memory: "2G"
-            cpu: 1
+            cpu: "1"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: trino-cfg-vol
