--- a/trino/base/statefulset.yaml
+++ b/trino/base/statefulset.yaml
@@ -58,6 +58,9 @@ spec:
           requests:
             memory: "2G"
             cpu: "1"
+          limits:
+            memory: "4G"
+            cpu: "2"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: trino-cfg-vol
@@ -67,7 +70,7 @@ spec:
   - metadata:
       name: trino-tmp-data
     spec:
-      #storageClassName: 
+      #storageClassName: default
       accessModes:
       - ReadWriteOnce
       resources:
