--- a/trino/overlays/comet/kustomization.yaml
+++ b/trino/overlays/comet/kustomization.yaml
@@ -32,7 +32,7 @@ patchesStrategicMerge:
 
 images:
 - name: "trinodb/trino"
-  newName: "trinodb/trino"
-  newTag: "360"
+  newName: "comet.charltontechnology.net/tarland/trino"
+  newTag: "363"
 
 namespace: trino
