--- a/docker/hive3/Dockerfile
+++ b/docker/hive3/Dockerfile
@@ -1,11 +1,14 @@
 FROM openjdk:8-slim
 
 ARG HADOOP_VERSION=3.2.0
+ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
+ARG hive_uri=https://downloads.apache.org
+ARG mysql_url=https://dev.mysql.com/get/Downloads/Connector-J
 
 RUN apt-get update && apt-get install -y curl --no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
 
-RUN curl https://archive.apache.org/dist/hadoop/core/hadoop-$HADOOP_VERSION/hadoop-$HADOOP_VERSION.tar.gz \
+RUN curl ${hadoop_uri}/hadoop-$HADOOP_VERSION/hadoop-$HADOOP_VERSION.tar.gz \
 	| tar xvz -C /opt/  \
 	&& ln -s /opt/hadoop-$HADOOP_VERSION /opt/hadoop \
 	&& rm -r /opt/hadoop/share/doc 
@@ -16,11 +19,11 @@ RUN ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoo
 ENV HADOOP_HOME="/opt/hadoop"
 ENV PATH="/opt/spark/bin:/opt/hadoop/bin:${PATH}"
 
-RUN curl https://downloads.apache.org/hive/hive-3.1.2/apache-hive-3.1.2-bin.tar.gz \
+RUN curl ${hive_uri}/hive/hive-3.1.2/apache-hive-3.1.2-bin.tar.gz \
 	| tar xvz -C /opt/ \
 	&& ln -s /opt/apache-hive-3.1.2-bin /opt/hive
 
-RUN curl -L https://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-5.1.47.tar.gz \
+RUN curl -L ${mysql_uri}/mysql-connector-java-5.1.47.tar.gz \
 	| tar xvz -C /opt/ \
 	&& ln -s /opt/mysql-connector-java-5.1.47/mysql-connector-java-5.1.47.jar /opt/hadoop/share/hadoop/common/lib/ \
 	&& ln -s /opt/mysql-connector-java-5.1.47/mysql-connector-java-5.1.47.jar /opt/hive/lib/ 
