--- a/docker/hive3/Dockerfile
+++ b/docker/hive3/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:8-slim
 ARG HADOOP_VERSION=3.2.0
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://downloads.apache.org
-ARG mysql_url=https://dev.mysql.com/get/Downloads/Connector-J
+ARG mysql_uri=https://dev.mysql.com/get/Downloads/Connector-J
 
 RUN apt-get update && apt-get install -y curl --no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
@@ -17,7 +17,7 @@ RUN ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoo
     ln -s /opt/hadoop/share/hadoop/tools/lib/aws-java-sdk* /opt/hadoop/share/hadoop/common/lib/
 
 ENV HADOOP_HOME="/opt/hadoop"
-ENV PATH="/opt/spark/bin:/opt/hadoop/bin:${PATH}"
+ENV PATH="/opt/hadoop/bin:${PATH}"
 
 RUN curl ${hive_uri}/hive/hive-3.1.2/apache-hive-3.1.2-bin.tar.gz \
 	| tar xvz -C /opt/ \
