--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ hive-init-schema.yaml
 hive-metastore/base/core-site.xml
 hive-metastore/base/hive-site.xml
 trino/base/trino-configmap.yaml
-trino/overlays
-!trino/overlays/example
+**/overlays
+!**/overlays/example
