--- a/trino/overlays/example/kustomization.yaml
+++ b/trino/overlays/example/kustomization.yaml
@@ -32,7 +32,7 @@ patchesStrategicMerge:
 
 images:
 - name: "trinodb/trino"
-  newName: "quay.io/tcarland/trino"
+  newName: "gcr.io/myproject/trino"
   newTag: "375"
 
 namespace: trino
