--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: hive-metastore
-        image: quay.io/tcarland/hive:v3.1.2-metis-2202.06
+        image: quay.io/tcarland/hive:v3.1.3-tethys-2206.01
         imagePullPolicy: IfNotPresent
         env:
         - name: AWS_ACCESS_KEY_ID
