--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ hive-init-schema.yaml
 hive-metastore/base/core-site.xml
 hive-metastore/base/hive-site.xml
 trino/base/trino-configmap.yaml
+trino/base/secrets.env
 **/overlays
 !trino/overlays/example
 !mysql-server/overlays/example
