--- a/conf/trino-configmap.yaml.template
+++ b/conf/trino-configmap.yaml.template
@@ -43,7 +43,7 @@ data:
     max-spill-per-node=2TB
     query-max-spill-per-node=1TB
   hive.properties: |-
-    connector.name=hive-hadoop2
+    connector.name=hive
     hive.metastore.uri=thrift://hive-metastore.${HIVE_NAMESPACE}.svc.cluster.local:9083
     hive.allow-drop-table=true
     hive.hive-views.enabled=true
