--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -7,6 +7,6 @@ bases:
 images:
 - name: quay.io/tcarland/hive
   newName: gcr.io/myproject/hive
-  newTag: v3.1.3-mimas-2212.01
+  newTag: v3.1.3-fenrir-2304.11
 
 namespace: trino
