--- a/hive-metastore/containerfiles/hive3/Containerfile
+++ b/hive-metastore/containerfiles/hive3/Containerfile
@@ -1,11 +1,14 @@
-FROM openjdk:11-slim
+ARG java_image_tag=17-jre
 
-ARG HADOOP_VERSION=3.3.2
-ARG HIVE_VERSION=3.1.3
+ARG hadoop_version=3.3.4
+ARG hive_version=3.1.3
+ARG mysql_cj_version=8.0.32
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://downloads.apache.org/hive
 ARG mysql_uri=https://dev.mysql.com/get/Downloads/Connector-J
+
+FROM eclipse-temurin:${java_image_tag}
 
 RUN apt-get update && apt-get install -y curl --no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
@@ -21,12 +24,11 @@ RUN ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoo
 ENV HADOOP_HOME="/opt/hadoop"
 ENV PATH="/opt/hadoop/bin:${PATH}"
 
-RUN curl ${hive_uri}/hive-$HIVE_VERSION/apache-hive-$HIVE_VERSION-bin.tar.gz \
+RUN curl ${hive_uri}/hive-${hive_version}/apache-hive-${hive_version}-bin.tar.gz \
 	| tar xvz -C /opt/ \
-	&& ln -s /opt/apache-hive-$HIVE_VERSION-bin /opt/hive
+	&& ln -s /opt/apache-hive-${hive_version}-bin /opt/hive
 
-RUN curl -L ${mysql_uri}/mysql-connector-j-8.0.32.tar.gz \
+RUN curl -L ${mysql_uri}/mysql-connector-j-${mysql_cj_version}.tar.gz \
 	| tar xvz -C /opt/ \
-	&& ln -s /opt/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar /opt/hadoop/share/hadoop/common/lib/ \
-	&& ln -s /opt/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar /opt/hive/lib/ 
-
+	&& ln -s /opt/mysql-connector-j-${mysql_cj_version}/mysql-connector-j-${mysql_cj_version}.jar /opt/hadoop/share/hadoop/common/lib/ \
+	&& ln -s /opt/mysql-connector-j-${mysql_cj_version}/mysql-connector-j-${mysql_cj_version}.jar /opt/hive/lib/ 
