--- a/mysql-server/base/configmap.yaml
+++ b/mysql-server/base/configmap.yaml
@@ -20,7 +20,8 @@ data:
     sort_buffer_size        = 8M
     join_buffer_size        = 8M
     transaction-isolation=READ-COMMITTED
-    binlog-format=mixed
+    binlog-format=ROW
+    binlog_row_image=full
     log-bin=mysql-bin
     max_binlog_size=300M
     log_bin_trust_function_creators = 1
