--- a/hive-metastore/containerfiles/hive3/Containerfile
+++ b/hive-metastore/containerfiles/hive3/Containerfile
@@ -1,28 +1,31 @@
 ARG java_image_tag=17-jre
 
+FROM eclipse-temurin:${java_image_tag}
+
 ARG hadoop_version=3.3.4
 ARG hive_version=3.1.3
-ARG mysql_cj_version=8.0.32
+ARG mysql_cj_version=8.0.33
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://downloads.apache.org/hive
 ARG mysql_uri=https://dev.mysql.com/get/Downloads/Connector-J
 
-FROM eclipse-temurin:${java_image_tag}
 
 RUN apt-get update && apt-get install -y curl --no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
 
-RUN curl ${hadoop_uri}/hadoop-$HADOOP_VERSION/hadoop-$HADOOP_VERSION.tar.gz \
+RUN curl ${hadoop_uri}/hadoop-${hadoop_version}/hadoop-${hadoop_version}.tar.gz \
 	| tar xvz -C /opt/  \
-	&& ln -s /opt/hadoop-$HADOOP_VERSION /opt/hadoop \
+	&& ln -s /opt/hadoop-${hadoop_version} /opt/hadoop \
 	&& rm -r /opt/hadoop/share/doc 
 
 RUN ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoop/common/lib/ && \
     ln -s /opt/hadoop/share/hadoop/tools/lib/aws-java-sdk* /opt/hadoop/share/hadoop/common/lib/
 
+
 ENV HADOOP_HOME="/opt/hadoop"
 ENV PATH="/opt/hadoop/bin:${PATH}"
+
 
 RUN curl ${hive_uri}/hive-${hive_version}/apache-hive-${hive_version}-bin.tar.gz \
 	| tar xvz -C /opt/ \
