--- a/mysql-server/base/mysqld-pvc.yaml
+++ b/mysql-server/base/mysqld-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-data-disk
-  namespace: $(namespace)
+  namespace: namespace_PLACEHOLDER
 spec:
   accessModes:
     - ReadWriteOnce
