fix namespace as param for mysql manifests (#60)

--- a/mysql-server/base/mysqld-pvc.yaml
+++ b/mysql-server/base/mysqld-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-data-disk
-  namespace: namespace_PLACEHOLDER
+  namespace: $(namespace)
 spec:
   accessModes:
     - ReadWriteOnce
