--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -1,12 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: trino
 
-bases:
+resources:
 - ../../base
 
 images:
 - name: quay.io/tcarland/hive
   newName: gcr.io/myproject/hive
   newTag: v3.1.3-ersa-2308.12
-
-namespace: trino
