--- a/conf/hive-init-schema.yaml.template
+++ b/conf/hive-init-schema.yaml.template
@@ -9,7 +9,10 @@ spec:
     spec:
       containers:
       - name: hive-schematool
-        image: ${HIVE_IMAGE} 
+        image: ${HIVE_IMAGE}
+        env:
+        - name: JAVA_HOME
+          value: /usr/lib/jvm/java-17-openjdk-amd64
         volumeMounts:
         - name: metastore-cfg-vol
           mountPath: /opt/hive/conf/hive-site.xml
@@ -19,7 +22,7 @@ spec:
           subPath: core-site.xml
         command: ["/opt/hive/bin/schematool"]
         args: ["-dbType", "mysql", "-initSchema", "-userName", "root", "-passWord", "${MYSQLD_ROOT_PASSWORD}", 
-        "-url", "jdbc:mysql://mysql-service.${HIVE_NAMESPACE}.svc.cluster.local:3306/metastore_db?createDatabaseIfNotExist=true&useSSL=false"]
+          "-url", "jdbc:mysql://mysql-service.${HIVE_NAMESPACE}.svc.cluster.local:3306/metastore_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true"]
       restartPolicy: Never
       volumes:
         - name: metastore-cfg-vol
