--- a/mysql-server/base/configmap.yaml
+++ b/mysql-server/base/configmap.yaml
@@ -25,5 +25,6 @@ data:
     log-bin=mysql-bin
     max_binlog_size=300M
     log_bin_trust_function_creators = 1
+    default_authentication_plugin=mysql_native_password
     expire_logs_days=7
     server-id=1
