--- a/mysql-server/base/deployment.yaml
+++ b/mysql-server/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: mysql
-          image: mysql:5.7
+          image: mysql:8.0.36-debian
           ports:
             - containerPort: 3306
           volumeMounts:
