--- a/trino/base/deployment.yaml
+++ b/trino/base/deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: trino-coordinator
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
       - name: trino
         image: trinodb/trino:439
