--- a/trino/base/statefulset.yaml
+++ b/trino/base/statefulset.yaml
@@ -16,6 +16,8 @@ spec:
         app: trino-worker
     spec:
       securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
         fsGroup: 1000
       containers:
       - name: trino
