--- a/hive-metastore/Containerfile
+++ b/hive-metastore/Containerfile
@@ -1,9 +1,9 @@
-FROM debian:bullseye-slim
+FROM eclipse-temurin:21-jre
 
 ARG hadoop_version=3.3.4
 ARG hive_version=3.1.3
-ARG mysql_cj_version=8.3.0
-ARG java_version=17
+ARG mysql_cj_version=8.4.0
+ARG java_version=21
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://downloads.apache.org/hive
@@ -16,7 +16,7 @@ ENV PATH="/opt/hadoop/bin:${PATH}"
 RUN groupadd --gid 1000 hive && \
     useradd -m --gid 1000 --uid 1000 hive && \
     apt-get update && \
-    apt-get install -y curl openjdk-${java_version}-jre --no-install-recommends && \
+    apt-get install -y curl --no-install-recommends && \
     rm -rf /var/lib/apt/lists/*
 
 RUN curl ${hadoop_uri}/hadoop-${hadoop_version}/hadoop-${hadoop_version}.tar.gz  | \
