--- a/conf/trino-configmap.yaml.template
+++ b/conf/trino-configmap.yaml.template
@@ -15,6 +15,8 @@ data:
     -XX:+UseGCOverheadLimit
     -XX:+HeapDumpOnOutOfMemoryError
     -XX:ReservedCodeCacheSize=512M
+    -XX:+UnlockDiagnosticVMOptions
+    -XX:G1NumCollectionsKeepPinned=10000000
     -Djdk.attach.allowAttachSelf=true
     -Djdk.nio.maxCachedBufferSize=2000000
   config.properties.coordinator: |-
