--- a/hive-metastore/Containerfile
+++ b/hive-metastore/Containerfile
@@ -1,9 +1,11 @@
-FROM eclipse-temurin:21-jre
+
+ARG java_version=17
+
+FROM eclipse-temurin:${java_version}-jre
 
 ARG hadoop_version=3.3.4
 ARG hive_version=3.1.3
 ARG mysql_cj_version=8.4.0
-ARG java_version=21
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://downloads.apache.org/hive
