--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: hive-metastore
-        image: quay.io/tcarland/hive:v3.1.3-fenrir-2402.28
+        image: quay.io/tcarland/hive:v3.1.3-mimas-2407.14
         imagePullPolicy: IfNotPresent
         env:
         - name: AWS_ACCESS_KEY_ID
