--- a/mysql-server/overlays/example/kustomization.yaml
+++ b/mysql-server/overlays/example/kustomization.yaml
@@ -9,3 +9,20 @@ images:
 - name: mysql
   newName: gcr.io/myproject/mysql
   newTag: "8.0.38"
+
+patches:
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: mysql-server
+      namespace: $(namespace)
+      labels:
+        app: mysql
+    spec:
+      template:
+        spec:
+          securityContext:
+            runAsUser: 999
+            runAsGroup: 1000
+            fsGroup: 1000
