--- a/conf/trino-configmap.yaml.template
+++ b/conf/trino-configmap.yaml.template
@@ -21,19 +21,21 @@ data:
     -Djdk.nio.maxCachedBufferSize=2000000
   config.properties.coordinator: |-
     coordinator=true
-    discovery-server.enabled=true
+    discovery.uri=http://trino-coordinator-service.${TRINO_NAMESPACE}.svc.cluster.local:8080
     node-scheduler.include-coordinator=false
+    http-server.authentication.type=PASSWORD
     http-server.http.port=8080
     http-server.process-forwarded=true
+    internal-communication.shared-secret=${TRINO_PSK}
     query.max-memory=8GB
     query.max-memory-per-node=4GB
     query.max-stage-count=20
     task.min-writer-count=2
     task.max-writer-count=4
-    discovery.uri=http://trino-coordinator-service.${TRINO_NAMESPACE}.svc.cluster.local:8080
   config.properties.worker: |-
     coordinator=false
     http-server.http.port=8080
+    internal-communication.shared-secret=${TRINO_PSK}
     query.max-memory=8GB
     query.max-memory-per-node=4GB
     query.max-stage-count=20
@@ -45,6 +47,11 @@ data:
     spiller-spill-path=/tmp
     max-spill-per-node=2TB
     query-max-spill-per-node=1TB
+  password-authenticator.properties: |-
+    password-authenticator.name=file
+    file.password-file=/etc/trino/password.db
+    file.refresh-period=60s
+    file.auth-token-cache.max-size=1000
   hive.properties: |-
     connector.name=hive
     hive.metastore.uri=thrift://hive-metastore.${HIVE_NAMESPACE}.svc.cluster.local:9083
@@ -54,7 +61,6 @@ data:
     hive.s3.max-connections=100
   iceberg.properties: |-
     connector.name=iceberg
-    iceberg.catalog.type=hive
     iceberg.catalog.type=hive_metastore
     iceberg.compression-codec=snappy
     iceberg.hive-catalog-name=hive
