--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -15,12 +15,12 @@ spec:
         app: hive-metastore
     spec:
       securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
+        runAsUser: 999
+        runAsGroup: 999
+        fsGroup: 999
       containers:
       - name: hive-metastore
-        image: quay.io/tcarland/hive:v3.1.3-mimas-2407.14
+        image: quay.io/tcarland/hive:v3.1.3-fenrir-2410.02
         imagePullPolicy: IfNotPresent
         env:
         - name: AWS_ACCESS_KEY_ID
