--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
 images:
 - name: quay.io/tcarland/hive
   newName: gcr.io/myproject/hive
-  newTag: v3.1.3-mimas-2407.14
+  newTag: v3.1.3-fenrir-2410.02
