--- a/hive-metastore/resources/Containerfile
+++ b/hive-metastore/resources/Containerfile
@@ -6,37 +6,41 @@ FROM eclipse-temurin:${java_version}-jre
 ARG hadoop_version=3.3.4
 ARG hive_version=3.1.3
 ARG mysql_cj_version=8.4.0
+ARG pg_jdbc_version=42.7.4
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://downloads.apache.org/hive
 ARG mysql_uri=https://dev.mysql.com/get/Downloads/Connector-J
+ARG pgsql_uri=https://jdbc.postgresql.org/download
 
 ENV HADOOP_HOME="/opt/hadoop"
 ENV HIVE_HOME="/opt/hive"
 ENV PATH="/opt/hadoop/bin:${PATH}"
 
-RUN groupadd --gid 1000 hive && \
-    useradd -m --gid 1000 --uid 1000 hive && \
+RUN groupadd --gid 999 hive && \
+    useradd -m --gid 999 --uid 999 hive && \
     apt-get update && \
     apt-get install -y curl --no-install-recommends && \
     rm -rf /var/lib/apt/lists/*
 
-RUN curl ${hadoop_uri}/hadoop-${hadoop_version}/hadoop-${hadoop_version}.tar.gz  | \
+RUN curl -L ${hadoop_uri}/hadoop-${hadoop_version}/hadoop-${hadoop_version}.tar.gz  | \
     tar xvz -C /opt/ && \
 	ln -s /opt/hadoop-${hadoop_version} /opt/hadoop && \
 	rm -r /opt/hadoop/share/doc && \
     ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoop/common/lib/ && \
     ln -s /opt/hadoop/share/hadoop/tools/lib/aws-java-sdk* /opt/hadoop/share/hadoop/common/lib/
 
-RUN curl ${hive_uri}/hive-${hive_version}/apache-hive-${hive_version}-bin.tar.gz \
-	| tar xvz -C /opt/ \
-	&& ln -s /opt/apache-hive-${hive_version}-bin /opt/hive
+RUN curl -L ${hive_uri}/hive-${hive_version}/apache-hive-${hive_version}-bin.tar.gz | \
+	tar xvz -C /opt/ && \
+	ln -s /opt/apache-hive-${hive_version}-bin /opt/hive
 
-RUN curl -L ${mysql_uri}/mysql-connector-j-${mysql_cj_version}.tar.gz \
-	| tar xvz -C /opt/ \
-	&& ln -s /opt/mysql-connector-j-${mysql_cj_version}/mysql-connector-j-${mysql_cj_version}.jar /opt/hadoop/share/hadoop/common/lib/ \
-	&& ln -s /opt/mysql-connector-j-${mysql_cj_version}/mysql-connector-j-${mysql_cj_version}.jar /opt/hive/lib/ 
+RUN curl -L ${mysql_uri}/mysql-connector-j-${mysql_cj_version}.tar.gz | \
+	tar xvz -C /opt/ && \
+	ln -s /opt/mysql-connector-j-${mysql_cj_version}/mysql-connector-j-${mysql_cj_version}.jar /opt/hadoop/share/hadoop/common/lib/ && \
+	ln -s /opt/mysql-connector-j-${mysql_cj_version}/mysql-connector-j-${mysql_cj_version}.jar /opt/hive/lib/ 
 
+RUN curl -L ${pgsql_uri}/postgresql-${pg_jdbc_version}.jar -o /opt/hive/lib/postgresql-${pg_jdbc_version}.jar
+    
 WORKDIR /opt/hive
 USER hive
 
